Corrected layout on narrow screens (#357)

--- a/app/assets/stylesheets/app/_national-search.scss
+++ b/app/assets/stylesheets/app/_national-search.scss
@@ -65,6 +65,7 @@
   @include govuk-media-query(mobile, tablet) {
     position: relative;
     top: -10px;
+    left: 0;
   }
 }
 
@@ -74,13 +75,11 @@
   right: 0;
   background: govuk-colour("black");
   padding: 15px 20px 20px 20px;
+  margin-right: govuk-spacing(5);
   @include govuk-media-query(mobile, tablet) {
     position: relative;
-    top: 20px;
-    padding: 15px 15px 15px 30px;
-    display: block;
-    width: 100vw;
-    left: -20px;
+    padding: 15px;
+    margin-right: 0;
   }
 }
 
@@ -126,7 +125,12 @@
 }
 
 .app-search-input {
+  position: relative;
   height: auto;
+  z-index: 1;
+  @include govuk-media-query(mobile, tablet) {
+    margin-bottom: 0;
+  }
 }
 
 .app-search-hint {
