--- a/app/assets/stylesheets/app/_utils.scss
+++ b/app/assets/stylesheets/app/_utils.scss
@@ -7,3 +7,21 @@
     padding-right: 20px;
   }
 }
+
+.app-hide-mobile {
+  @include govuk-media-query($until: tablet) {
+    display: none;
+  }
+}
+
+.app-hide-tablet {
+  @include govuk-media-query($until: tablet) {
+    display: none;
+  }
+}
+
+.app-hide-desktop {
+  @include govuk-media-query($from: desktop) {
+    display: none;
+  }
+}
